webots_swarm/webots_output.log
2026-04-02 02:41:56.000 webots[95930:982883] +[IMKClient subclass]: chose IMKClient_Modern
2026-04-02 02:41:56.000 webots[95930:982883] +[IMKInputSession subclass]: chose IMKInputSession_Modern
WARNING: System below the minimal requirements.

Webots has detected that your GPU vendor is 'Apple'. A recent NVIDIA or AMD graphics adapter is highly recommended to run Webots smoothly. 

 - Shadows have been deactivated.
 - Anti-aliasing has been deactivated.
 - Main 3D view global ambient occlusion has been de-activated.
 - Texture quality has been reduced.

You can try to re-activate some OpenGL features from the Webots preferences.
ERROR: Error downloading EXTERNPROTO 'Box': Cannot download 'https://raw.githubusercontent.com/cyberbotics/webots/R2023b/projects/objects/shapes/protos/Box.proto', error code: 203: Error transferring https://raw.githubusercontent.com/cyberbotics/webots/R2023b/projects/objects/shapes/protos/Box.proto - server replied: 
ERROR: '/Users/gary/untitled folder 4/webots_swarm/worlds/swarm_mission.wbt':26:3: error: Skipped unknown 'extensionSlot' parameter in Mavic2Pro PROTO.
ERROR: '/Users/gary/untitled folder 4/webots_swarm/worlds/swarm_mission.wbt':36:3: error: Skipped unknown 'extensionSlot' parameter in Mavic2Pro PROTO.
ERROR: '/Users/gary/untitled folder 4/webots_swarm/worlds/swarm_mission.wbt':46:3: error: Skipped unknown 'extensionSlot' parameter in Mavic2Pro PROTO.
UNSUPPORTED (log once): POSSIBLE ISSUE: unit 0 GLD_TEXTURE_INDEX_2D is unloadable and bound to sampler type (Float) - using zero texture because texture unloadable
INFO: swarm_controller: Starting controller: python3 -u swarm_controller.py
INFO: swarm_controller: Starting controller: python3 -u swarm_controller.py
INFO: swarm_controller: Starting controller: python3 -u swarm_controller.py
INFO: <generic>: Starting controller: /Applications/Webots.app/Contents/Resources/projects/controllers/generic/generic
Device "emitter" was not found on robot "mavic 2"
Device "receiver" was not found on robot "mavic 2"
Traceback (most recent call last):
  File "/Users/gary/untitled folder 4/webots_swarm/controllers/swarm_controller/swarm_controller.py", line 107, in <module>
    controller = SimpleDrone()
  File "/Users/gary/untitled folder 4/webots_swarm/controllers/swarm_controller/swarm_controller.py", line 38, in __init__
    self.receiver.enable(self.time_step)
    ^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'enable'
WARNING: 'swarm_controller' controller exited with status: 1.
Device "emitter" was not found on robot "mavic 1"
Device "receiver" was not found on robot "mavic 1"
Traceback (most recent call last):
  File "/Users/gary/untitled folder 4/webots_swarm/controllers/swarm_controller/swarm_controller.py", line 107, in <module>
    controller = SimpleDrone()
  File "/Users/gary/untitled folder 4/webots_swarm/controllers/swarm_controller/swarm_controller.py", line 38, in __init__
    self.receiver.enable(self.time_step)
    ^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'enable'
WARNING: 'swarm_controller' controller exited with status: 1.
Device "emitter" was not found on robot "mavic 3"
Device "receiver" was not found on robot "mavic 3"
Traceback (most recent call last):
  File "/Users/gary/untitled folder 4/webots_swarm/controllers/swarm_controller/swarm_controller.py", line 107, in <module>
    controller = SimpleDrone()
  File "/Users/gary/untitled folder 4/webots_swarm/controllers/swarm_controller/swarm_controller.py", line 38, in __init__
    self.receiver.enable(self.time_step)
    ^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'enable'
WARNING: 'swarm_controller' controller exited with status: 1.
INFO: <generic>: Terminating.
